--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 name: Kenneth Foster
 title: Kenneth Foster
-theme: jekyll-theme-minimal
+description: A place to show my projects and experience
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme
