--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,10 @@ description: A place to show my projects and experience
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
+
+social-network-links:
+  github: ken-foster
+  kaggle: kfoster150
+  linkedin: kennethbfoster
+  
+  
