--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
-author: Kenneth Foster
 title: Kenneth Foster
 description: A place to show my projects and experience
-#remote_theme: pages-themes/minimal@v0.2.0
-#plugins:
-#- jekyll-remote-theme
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme
 
 social-network-links:
   github: ken-foster
