--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Kenneth Foster
 description: A place to show my projects and experience
-remote_theme: pages-themes/minimal@v0.2.0
 markdown: kramdown
+theme: minima
 plugins:
 - jekyll-remote-theme
 
