--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,11 @@ theme: minima
 plugins:
 - jekyll-remote-theme
 
-social-network-links:
-  github: ken-foster
-  kaggle: kfoster150
-  linkedin: kennethbfoster
+header_pages:
+  - index.md
   
+social-links:
+  - { platform: linkedin, user_url: "https://www.linkedin.com/in/kennethbfoster/" }
+  - { platform: github, user_url: "https://github.com/ken-foster/" }
+  - { platform: kaggle, user_url: "https://www.kaggle.com/kfoster150" }
   
