--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,9 @@ description: >
   A portolio website for Kenneth Foster
 
 # Build Settings
-theme: modernist
+remote_theme: pages-themes/modernist@v0.2.0
+plugins:
+- jekyll-remote-theme
 
 # Social-links
 linkedin_username: kennethbfoster
