--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@ description: >
   A portolio website for Kenneth Foster
 
 # Build Settings
-remote_theme: pages-themes/modernist@v0.2.0
+theme: minima
+#remote_theme: pages-themes/modernist@v0.2.0
 plugins:
 - jekyll-remote-theme
 
