--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,9 @@ description: >
   A portolio website for Kenneth Foster
 
 # Build Settings
-theme: minima
+#theme: minima
 #remote_theme: pages-themes/modernist@v0.2.0
+remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme
 
