--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ description: >
 # Build Settings
 #theme: minima
 #remote_theme: pages-themes/modernist@v0.2.0
-#remote_theme: pages-themes/slate@v0.2.0
-remote_theme: pages-themes/tactile@v0.2.0
+remote_theme: pages-themes/slate@v0.2.0
+#remote_theme: pages-themes/tactile@v0.2.0
 plugins:
 - jekyll-remote-theme
 
