--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title: A data professional who is happy to help!
+title: Kenneth B. Foster
   
 description: >
-  A portolio website, hosted on Github Pages
+  A data professional who is happy to help
 
 # Build Settings
 #theme: minima
 #remote_theme: pages-themes/modernist@v0.2.0
-#remote_theme: pages-themes/slate@v0.2.0
-remote_theme: pages-themes/tactile@v0.2.0
+remote_theme: pages-themes/slate@v0.2.0
+#remote_theme: pages-themes/tactile@v0.2.0
 plugins:
 - jekyll-remote-theme
 
